# alphaonelabs-education-website

./: .coderabbite.yml  .dockerignore  .env.sample  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  0001-Add-robust-migration-fix-for-duplicate-slug-issue.patch  DEPLOYMENT.md  DEPLOYMENT_ENCRYPTION.md  Dockerfile  ENCRYPTION.md  ENCRYPTION_MIGRATION.md  ENCRYPTION_QUICKSTART.md  ENCRYPTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRE-COMMIT-README.md  QUICKSTART_ENCRYPTION.md  README.fr.md  README.md  REFERRAL_IMPLEMENTATION.md  REFERRAL_QUICKSTART.md  SOCIAL_SHARE_DISCOUNT_PR.md  USER_PII_ENCRYPTION.md  VIRTUAL_CLASSROOM_QUICK_REFERENCE.md  VIRTUAL_CLASSROOM_README.md  VIRTUAL_LOBBY_QUICK_START.md  db.sqlite3  default_2.sqlite3  default_3.sqlite3  delete_migration_entry.py  drop_table.py  encrypt_data.py  entrypoint.sh  er.name  error.html  error_new.html  metadata_43.json  metadata_44.json  pyproject.toml  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  pull_request_template.md
ai/: admin.py  apps.py  models.py  progress.py  services.py  tutor.py  tutors.py  urls.py  views.py
ai_assistant/: urls.py
ansible/: education-website.service.j2  nginx-http.conf.j2  playbook.yml
courses/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
docker/: entrypoint.sh
docs/: LIVE_COUNTERS.md  MAILGUN_EMAIL_TRACKING.md  REFERRAL_SYSTEM.md  VIRTUAL_LOBBY.md  VIRTUAL_LOBBY_UI.md
mass_class/: authentication_system.py  real_time_features.js  student_interface.html  webrtc_rtmp_bridge.py  webrtc_signaling_server.py  webrtc_teacher.js
scripts/: assign.py  (+6 more)
(+818 files in other folders)
